# clear-pipe

./: .gitignore  README.md  pyproject.toml  requirements.txt  tune.py
clear_pipe/: callbacks.py  clip.py  clip_hijack.py  data.py  sd.py  util.py
configs/: a.yaml
